@@ -3,6 +3,10 @@ Event.observe(window, 'load', initPage);
 function initPage(e) {
     Event.observe('management_form', 'submit', 
         function(e) {
-            return confirm('更新します。よろしいですか？');
+            if (!confirm('更新します。よろしいですか？')) {
+                Event.stop(e);
+                return false;
+            }
+            return true;
         });
 }
